Added campaign theme selector to Chaos Engine

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ label {
     margin-right: 10px;
 }
 
-select, button {
+.controls select, .controls button {
     padding: 10px;
     margin: 5px;
     background-color: #6b3fa0;
